@@ -1,5 +1,6 @@
 20090928
 	update import(4) to remove the restriction to Plan 9 (can use Inferno's own factotum)
+	(emu os)^/port/devmnt.c fix from plan 9 (don't access vanished data)
 20090830
 	check subexp length in ed [cmbrannon79]
 20090825
